--- a/FanPage-SU/estevão-site/steven.html
+++ b/FanPage-SU/estevão-site/steven.html
@@ -8,25 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--sections: divide sessões da página (estantes)-->
+    <!--divs: divide qualquer conteúdo (parteleiras)-->
     <section class="inicial">
         <h1>Steven Universo</h1>
         <h2>FanPage</h2>
     </section>
-    <section class="apresentacao">
-        <h1>Bem-vindos!</h1>
-        <h3>Esta FanPage é dedicada aos fãs do 
-            desenho Steven Universo. Por aqui você
-            encontrará curiosidades, cenas e
-            teorias de SU.</h3>
-        <br>
-        <p>Regras da comunidade:</p>
-        <br>
-        <ol>
-            <li>Não odiar a Rose</li>
-            <li>Odiar a Diamante Rosa</li>
-            <li>Amar a Garnet</li>
-            <li>Ter chorado em algum episódio</li>
-        </ol>
+    <section class="bem_vindos">
+        <div class="apresentacao">
+            <h1>Bem-vindos!</h1>
+            <h3>Esta FanPage é dedicada aos fãs do 
+                desenho Steven Universo. Por aqui você
+                encontrará curiosidades, cenas e
+                teorias de SU.</h3>
+            <br>
+            <p>Regras da comunidade:</p>
+            <br>
+            <ol>
+                <li>Não odiar a Rose</li>
+                <li>Odiar a Diamante Rosa</li>
+                <li>Amar a Garnet</li>
+                <li>Ter chorado em algum episódio</li>
+            </ol>
+        </div>
+        <div>
+            <img src="../imagens/gems.jpg" alt="gems">
+        </div>
     </section>
 </body>
 </html>
